--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,26 +12,33 @@
     <style>
 
 input {
-float : right;
-width: 300px;
-border: rgba(91,93,105,0.7) solid 1px;
-padding: 1em 1.4em;
-border-radius: 5px;
+    float : right;
+    width: 300px;
+    border: rgba(91,93,105,0.7) solid 1px;
+    padding: 1em 1.4em;
+    border-radius: 5px;
 }
 
 button {
-margin-left : 10px;
-float : right;
-width: 80px;
-cursor: pointer;
-border: none;
-border-radius: 5px;
-padding: 1em;
-background: #E36556;
-color: #fff;
-font-weight: 600;
+    margin-left: 10px;
+    float: right;
+    width: 80px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    padding: 1em;
+    background: #E36556;
+    color: #fff;
+    font-weight: 600;
 
 }
+        .save-b {
+            margin : 0 5px;
+            width: 80px;
+            padding: 0.9em;
+            font-weight: bold;
+        }
+
     </style>
 </head>
 <body>
@@ -47,6 +54,7 @@ font-weight: 600;
                          autocomplete="false"
                          placeholder="검색">
                   <button>검색</button>
+              <a href="#" class="btn btn-primary save-b">저장</a>
               </form>
 
 {% endif %}
